--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -11,7 +11,7 @@
                 "${fileDirname}\\date.cpp",      // Additional file
                 "${fileDirname}\\client.cpp",      // Additional file
                 "${fileDirname}\\chambre.cpp",      // Additional file
-                "${fileDirname}\\hotel.cpp",      // Additional file
+                "${fileDirname}\\reservation.cpp",      // Additional file
                 "-o",
                 "${fileDirname}\\${fileBasenameNoExtension}.exe"
             ],
